# proyectoML1P

./: Procfile  main.py  pyproject.toml  requirements.txt
controlador/: modulo_coseno.py  modulo_jaccard.py  modulo_lec_escri.py  modulo_maquinavec.py  modulo_tweets.py  nlp.py  procesos.py  servidor.py
modelo/: datasetGlobal.csv  dic_neg.txt  dic_posi.txt
static/css/: style.css
static/js/: scripts.js
templates/: LDA_Visualization.html  index.html
