[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "proyectoml1p"
version = "0.1.0"
[tool.poetry.dependencies]
django-user = "^0.2.1"
python = "^3.7"
sklearn = "^0.0.0"
tweepy = "^3.8"
textblob = "^0.15.3"
flask = "^1.1"
venv-run = "^0.0.0"
[tool.poetry.dev-dependencies]
