[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "proyectoml1p"
version = "0.1.0"
[tool.poetry.dependencies]
flask = "^1.1"
gensim = "^3.8"
gunicorn = "^20.0"
python = "^3.8"
sklearn = "^0.0.0"
textblob = "^0.15.3"
tweepy = "^3.8"
venv-run = "^0.0.0"
virtualenv = "^20.0"
pyldavis = "^2.1"
ipython = "^7.15"
[tool.poetry.dev-dependencies]
